--- a/src/main/java/frmMain.form
+++ b/src/main/java/frmMain.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1520" height="750"/>
+      <xy x="20" y="20" width="1519" height="750"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -1388,7 +1388,7 @@
                               </component>
                             </children>
                           </grid>
-                          <grid id="16fa" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                          <grid id="16fa" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                             <margin top="5" left="5" bottom="5" right="5"/>
                             <constraints>
                               <tabbedpane title="Edit Rack"/>
@@ -1410,7 +1410,7 @@
                               <grid id="e413a" layout-manager="GridLayoutManager" row-count="5" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="0" left="0" bottom="0" right="0"/>
                                 <constraints>
-                                  <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                  <grid row="0" column="3" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties/>
                                 <border type="bevel-raised" title="   Relays   " title-justification="2">
@@ -1531,7 +1531,7 @@
                                   <component id="3e627" class="javax.swing.JTextField" binding="txTestrackEditName">
                                     <constraints>
                                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="367" height="26"/>
+                                        <preferred-size width="303" height="26"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1551,7 +1551,7 @@
                                   <component id="ea86" class="javax.swing.JTextField" binding="txTestrackEditDescr">
                                     <constraints>
                                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="367" height="26"/>
+                                        <preferred-size width="309" height="26"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1562,7 +1562,7 @@
                                   <component id="171f9" class="javax.swing.JComboBox" binding="cbTestrackEditVehicle">
                                     <constraints>
                                       <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="367" height="25"/>
+                                        <preferred-size width="309" height="25"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1581,7 +1581,7 @@
                                   <component id="9584d" class="javax.swing.JTextField" binding="txTestrackEditAddress">
                                     <constraints>
                                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="367" height="26"/>
+                                        <preferred-size width="303" height="26"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1610,7 +1610,7 @@
                                   <component id="a8970" class="javax.swing.JTextField" binding="txTestrackEditWin">
                                     <constraints>
                                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="367" height="26"/>
+                                        <preferred-size width="303" height="26"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1630,7 +1630,7 @@
                                   <component id="a67df" class="javax.swing.JTextField" binding="txTestrackEditIpAddr">
                                     <constraints>
                                       <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="150" height="-1"/>
+                                        <preferred-size width="309" height="26"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1650,7 +1650,7 @@
                                   <component id="7e751" class="javax.swing.JTextField" binding="txTestrackEditQuidoPort">
                                     <constraints>
                                       <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="150" height="-1"/>
+                                        <preferred-size width="309" height="26"/>
                                       </grid>
                                     </constraints>
                                     <properties>
@@ -1778,13 +1778,116 @@
                               </grid>
                               <component id="6275" class="javax.swing.JButton" binding="btnTestrackEditUpdateRack">
                                 <constraints>
-                                  <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                                  <grid row="2" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                 </constraints>
                                 <properties>
                                   <font size="16" style="1"/>
                                   <text value="          Update TESTRACK          "/>
                                 </properties>
                               </component>
+                              <grid id="ed6f3" layout-manager="GridLayoutManager" row-count="6" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                                <margin top="0" left="0" bottom="0" right="0"/>
+                                <constraints>
+                                  <grid row="0" column="2" row-span="2" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                </constraints>
+                                <properties/>
+                                <border type="bevel-raised" title="    Extended Data    " title-justification="2">
+                                  <font size="12" style="1"/>
+                                  <title-color color="-14672672"/>
+                                </border>
+                                <children>
+                                  <component id="baf01" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12" style="1"/>
+                                      <text value="PUAccount:"/>
+                                    </properties>
+                                  </component>
+                                  <vspacer id="99e21">
+                                    <constraints>
+                                      <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                  </vspacer>
+                                  <component id="39ce8" class="javax.swing.JTextField" binding="txEditRackPuAccount">
+                                    <constraints>
+                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                        <preferred-size width="150" height="-1"/>
+                                      </grid>
+                                    </constraints>
+                                    <properties/>
+                                  </component>
+                                  <component id="b1cea" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12" style="1"/>
+                                      <text value="Password:"/>
+                                    </properties>
+                                  </component>
+                                  <component id="6dd4f" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12" style="1"/>
+                                      <text value="SPIN:"/>
+                                    </properties>
+                                  </component>
+                                  <component id="938ac" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12" style="1"/>
+                                      <text value="SOP:"/>
+                                    </properties>
+                                  </component>
+                                  <component id="8b777" class="javax.swing.JLabel">
+                                    <constraints>
+                                      <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                                    </constraints>
+                                    <properties>
+                                      <font size="12" style="1"/>
+                                      <text value="Env:"/>
+                                    </properties>
+                                  </component>
+                                  <component id="acbc3" class="javax.swing.JTextField" binding="txEditRackPuPwd">
+                                    <constraints>
+                                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                        <preferred-size width="150" height="-1"/>
+                                      </grid>
+                                    </constraints>
+                                    <properties/>
+                                  </component>
+                                  <component id="82b68" class="javax.swing.JTextField" binding="txEditRackPuSpin">
+                                    <constraints>
+                                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                        <preferred-size width="150" height="-1"/>
+                                      </grid>
+                                    </constraints>
+                                    <properties/>
+                                  </component>
+                                  <component id="306f5" class="javax.swing.JTextField" binding="txEditRackSop">
+                                    <constraints>
+                                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                        <preferred-size width="150" height="-1"/>
+                                      </grid>
+                                    </constraints>
+                                    <properties/>
+                                  </component>
+                                  <component id="a4944" class="javax.swing.JTextField" binding="txEditRackEnv">
+                                    <constraints>
+                                      <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                                        <preferred-size width="150" height="-1"/>
+                                      </grid>
+                                    </constraints>
+                                    <properties/>
+                                  </component>
+                                </children>
+                              </grid>
                             </children>
                           </grid>
                           <grid id="7967e" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -4298,7 +4401,7 @@
                       <editable value="false"/>
                       <font size="12"/>
                       <horizontalAlignment value="2"/>
-                      <text value="1.4.4.0"/>
+                      <text value="1.4.5.0"/>
                     </properties>
                   </component>
                   <component id="f55ba" class="javax.swing.JLabel">
